# agentgraph

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
agentgit/: __init__.py  core.py  eventbus.py  langgraph_callback.py  tracer.py
agentgit/models/: __init__.py
agentgit/storage/: checkpoint_store.py  dag_store.py  schema.sql
agentgit/tools/: branch_tools.py  version_tools.py
agenttest/: README.md  alignment.py  cascade.py  comparator.py  fingerprint.py  pyproject.toml  session.py
agenttest/cli/: __init__.py
agenttest/models/: __init__.py  comparison.py  config.py  llm_call_detail.py  recording.py  tag.py
agenttest/src/agenttest/: __init__.py  config_loader.py  recorder.py  replayer.py
agenttest/src/agenttest/cli/: main.py
agenttest/src/agenttest/interceptors/: __init__.py
agenttest/src/agenttest/pytest_plugin/: __init__.py  assertions.py  plugin.py
agenttest/storage/: __init__.py  schema.sql  test_store.py
examples/: demo_branch_compare.py
src/: core.py  event.py  eventbus.py  langgraph_callback.py  tracer.py
src/models/: agit.py  dag.py
src/storage/: __init__.py  checkpoint_store.py  dag_store.py  git_backend.py  schema.sql
src/tools/: __init__.py  branch_tools.py  version_tools.py
